1.15.4
---
- Fix stupid bug in mpg123_chomp_string() (introduced in 1.15.1), empty lines were badly treated. Only usage in mpg123 is for parsing HTTP redirect headers; malicious HTTP servers might exploit that (possibility to zero bytes in memory).
- some cleanup for nagging mode

1.15.3
---
- Fix WAV writing. AGAIN. People love to decode WAV to stdout in various ways that started to get broken with me starting to care for people who like to write to full disks. I frikkin' HATE this rat race! I'm even starting to SHOUT. Now, the code prefers to write no header at all (when there is no actual output) instead of possibly writing too many misleading ones. Getting the blame for breaking dir2ogg repeatedly while trying to cope with one fatal situation that you cannot really cope with sucks. Big time. I hope that's it now!

1.15.2
---
- build fix with older shells (== in configure)

1.15.1
---
- libmpg123 API version 37
- Fix corner case in HTTP communication with missing path in Location header (bug 187).
- Prevent nasty alignment issues by not guessing about assembler alignment when .balign is available (bug 188).

1.15.0
---
- Added --continue (also see scripts/conplay).
- Added number row to terminal control keys for 10% jump points (for navigating long tracks).
- Set xterm title always if asked, disregarding the -q switch (if you want fully quiet, don't specify --title).
- Enable terminal mode in OS/2 by explicitly checking for and using os2term library.
- Getting WAV/AU/CDR writing back to a sane state while still catching out-of-disk when writing headers (none in case of CDR) but removing that initial test that prevented writing on any non-seekable file (like, /dev/stdout to a pipe).
- Added native audio output for QNX (thanks to Mike Gorchak), also improving portability of configure script while at that.
- more robust recovery from ALSA issues (device suspend)
- Fix crash in module loader on *BSD.